--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,527 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+}
+
+@font-face {
+  font-family: "Roboto_mono";
+  src: url('../src/fonts/Roboto_Mono/static/RobotoMono-Regular.ttf') format('truetype');
+}
+
+.container {
+  background-color: #16171b;
+  width: 100%;
+  height: 100vh;
+}
+
+/* Header CSS */
+
+.header_container {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 140px;
+  padding-right: 140px;
+  border-bottom: 1px solid #22242F;
+}
+
+.header_left {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  font-family: 'Roboto_mono';
+}
+
+.wallet__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-right: 6px;
+  cursor: pointer;
+}
+
+.user__image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #1dff08;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 15px;
+}
+
+.wallet__title {
+  font-family: 'Roboto_mono';
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.current__wallet_title {
+  color: #919398;
+}
+
+.wallet__address {
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.wallet__copyButton {
+  width: 16px;
+  height: 16px;
+  /* background-color: #fff; */
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.ethBalance__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  background-color: #1C1E26;
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 16px;
+  margin-right: 6px;
+  margin-left: 6px;
+}
+
+.ethBalance__title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  color: #919398;
+}
+
+.wallet__image {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: #fff; */
+}
+
+.ethBalace__value {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.value__color {
+  color: #fff;
+  margin-right: 10px;
+}
+
+.dolarValue__color {
+  color: #919398;
+}
+
+.header_right {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  font-family: 'Roboto_mono';
+}
+
+.updated__main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-right: 12px;
+}
+
+.updated__icon {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #2ABE3C;
+  font-size: 14px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.updated__image {
+  width: 14px;
+  height: 14px;
+  margin-right: 10px;
+  /* background-color: #2ABE3C; */
+}
+
+.updated__data {
+  color: #fff;
+  font-size: 14px;
+}
+
+.trading__button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 12px 16px;
+  background-color: #2CBE2F;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 14px;
+  margin-left: 6px;
+  width: 170px;
+  cursor: pointer;
+}
+
+.trading__button_stop {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 12px 16px;
+  background-color: #919398;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 14px;
+  width: 170px;
+  margin-left: 6px;
+  cursor: pointer;
+}
+
+.tadingButton__image {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+  /* background-color: #fff; */
+}
+
+.tadingButton__image_stop {
+  width: 12px;
+  height: 12px;
+  margin-right: 10px;
+  background-color: #fff;
+}
+
+/* Live Trades CSS */
+
+.liveTrades__container {
+  display: flex;
+  margin-left: 140px;
+  margin-right: 140px;
+  border: 2px solid #22242F;
+  border-radius: 12px;
+  margin-top: 20px;
+  font-family: 'roboto_mono';
+  flex-direction: column;
+  padding-bottom: 10px;
+}
+
+.liveTrades__title {
+  display: flex;
+  color: #76DB8C;
+  align-items: left;
+  font-size: 18px;
+  padding: 15px;
+}
+
+.liveTrades__chartHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  background-color: #1C1E26;
+  color: #fff;
+  padding: 7px;
+  font-size: 16px;
+}
+
+.chartHeader__title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  padding: 0px 10px;
+  width: 14%;
+  /* background-color: #919398; */
+}
+
+.liveTrades__chartBody {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  color: #fff;
+  padding: 7px;
+  font-size: 14px;
+  border-bottom: 1px solid #22242F;
+  cursor: pointer;
+}
+
+.liveTrades__chartBody:last-child {
+  border: none;
+}
+
+.chartBody__title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  padding: 0px 10px;
+  width: 14%;
+  /* background-color: #919398; */
+}
+
+.chartBody__titleProfit {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  padding: 0px 10px;
+  width: 14%;
+  /* background-color: #919398; */
+  color: #76DB8C;
+}
+
+.titleChange__back {
+  background-color: #2CBE2F;
+  font-size: 12px;
+  padding: 2px 4px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+}
+
+/* PastTrades CSS */
+
+.pastTrades__container {
+  display: flex;
+  margin-left: 140px;
+  margin-right: 140px;
+  border: 2px solid #22242F;
+  border-radius: 12px;
+  margin-top: 20px;
+  font-family: 'roboto_mono';
+  flex-direction: column;
+  padding-bottom: 10px;
+}
+
+.pastTrades__title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: #fff;
+  align-items: left;
+  font-size: 18px;
+  padding: 15px;
+}
+
+.pastTrades__scale {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 14px;
+}
+
+.scale__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 1px 6px;
+  border: 1px solid #3A3C4B;
+  cursor: pointer;
+}
+
+.showmore__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  margin-top: 15px;
+}
+
+.showmore__button {
+  color: #fff;
+  border: 1px solid #3A3C4B;
+  padding: 6px 12px;
+  border-radius: 4px;
+}
+
+/* Profit CSS */
+
+.profit__container {
+  display: flex;
+  margin-left: 140px;
+  margin-right: 140px;
+  margin-top: 32px;
+  font-family: 'roboto_mono';
+  flex-direction: column;
+}
+
+.profit__main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.dayToDay__profit {
+  background-color: #1C1E26;
+  padding: 15px;
+  border-radius: 8px;
+}
+
+/* Wallet Connect Modal CSS */
+
+.modalContainer {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'roboto_mono';
+}
+
+.modalBackground {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modalContainer .modal {
+  width: 35vw;
+  height: auto;
+  padding: 1.7rem;
+  border-radius: 20px;
+  background-color: #16171B;
+  border: solid 2px #373737;
+  backdrop-filter: blur(5px);
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.modal__title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: #fff;
+  padding-bottom: 10px;
+}
+
+.walletAddress__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.walletAddress__container p {
+  color: #919398;
+  font-size: 14px;
+  padding-bottom: 10px;
+}
+
+
+.walletAddress__container input {
+  background-color: #16171B;
+  border: #3A3C4B 1px solid;
+  border-radius: 6px;
+  padding: 6px 15px;
+  font-size: 14px;
+  color: #fff;
+}
+
+.walletAddress__container input:focus {
+  outline: none;
+}
+
+.modalSave__button {
+  background-color: #fff;
+  color: #16171B;
+  font-size: 16px;
+  border-radius: 6px;
+  padding: 12px 24px;
+  margin-top: 10px;
+}
+
+/* Showmore Modal CSS */
+
+.showmoreModalContainer {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'roboto_mono';
+}
+
+.showmoreModalContainer .showmoremodal {
+  width: 75vw;
+  height: 85vh;
+  padding: 1.7rem;
+  border-radius: 20px;
+  background-color: #16171B;
+  border: solid 2px #373737;
+  backdrop-filter: blur(5px);
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.showmoreModal__title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: #fff;
+  padding-bottom: 10px;
+}
+
+.modal__pastTrades {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.modal__pastTrades p {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.trades__mainInfo {
+  height: 30.5vh;
+  overflow-y: scroll;
+}
+
+.trades__mainInfo::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 4px #16171B;
+	background-color: #16171B;
+}
+
+.trades__mainInfo::-webkit-scrollbar
+{
+	width: 4px;
+	background-color: #16171B;
+}
+
+.trades__mainInfo::-webkit-scrollbar-thumb
+{
+	background-color: #1C1E26;
 }
