--- a/src/index.css
+++ b/src/index.css
@@ -236,6 +236,30 @@ body {
   padding: 15px;
 }
 
+.liveTrades__body {
+  display: flex;
+  flex-direction: column;
+  height: 75px;
+  overflow-y: scroll;
+}
+
+.liveTrades__body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 4px #16171B;
+	background-color: #16171B;
+}
+
+.liveTrades__body::-webkit-scrollbar
+{
+	width: 4px;
+	background-color: #16171B;
+}
+
+.liveTrades__body::-webkit-scrollbar-thumb
+{
+	background-color: #1C1E26;
+}
+
 .liveTrades__chartHeader {
   display: flex;
   align-items: center;
@@ -254,6 +278,16 @@ body {
   justify-content: start;
   padding: 0px 10px;
   width: 14%;
+  /* background-color: #919398; */
+}
+
+.chartHeader__titleProfile {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  padding: 0px 10px;
+  width: 16%;
   /* background-color: #919398; */
 }
 
@@ -289,7 +323,7 @@ body {
   align-items: center;
   justify-content: start;
   padding: 0px 10px;
-  width: 14%;
+  width: 16%;
   /* background-color: #919398; */
   color: #76DB8C;
 }
